feat: add minimum operability baseline
